[gd_scene load_steps=3 format=3 uid="uid://bqwywdx3bysmf"]

[ext_resource type="Script" path="res://scripts/tabuleiro_maior.gd" id="1_ihiev"]
[ext_resource type="PackedScene" uid="uid://byvk5n7pxaoit" path="res://scenes/tabuleiro.tscn" id="2_6xdip"]

[node name="TabuleiroMaior" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 1080.0
script = ExtResource("1_ihiev")

[node name="Tabuleiro_0" parent="." instance=ExtResource("2_6xdip")]

[node name="Tabuleiro_1" parent="." instance=ExtResource("2_6xdip")]
offset_left = 360.0
offset_right = 720.0

[node name="Tabuleiro_2" parent="." instance=ExtResource("2_6xdip")]
offset_left = 720.0
offset_right = 1080.0

[node name="Tabuleiro_3" parent="." instance=ExtResource("2_6xdip")]
offset_top = 360.0
offset_bottom = 720.0

[node name="Tabuleiro_4" parent="." instance=ExtResource("2_6xdip")]
offset_left = 360.0
offset_top = 360.0
offset_right = 720.0
offset_bottom = 720.0

[node name="Tabuleiro_5" parent="." instance=ExtResource("2_6xdip")]
offset_left = 720.0
offset_top = 360.0
offset_right = 1080.0
offset_bottom = 720.0

[node name="Tabuleiro_6" parent="." instance=ExtResource("2_6xdip")]
offset_top = 720.0
offset_bottom = 1080.0

[node name="Tabuleiro_7" parent="." instance=ExtResource("2_6xdip")]
offset_left = 360.0
offset_top = 720.0
offset_right = 720.0
offset_bottom = 1080.0

[node name="Tabuleiro_8" parent="." instance=ExtResource("2_6xdip")]
offset_left = 720.0
offset_top = 720.0
offset_right = 1080.0
offset_bottom = 1080.0
